include/ishtar.h

struct ishtar_class_t;
struct ishtar_object_t;
struct ishtar_module_t;
struct RuntimeComplexType;
struct ishtar_method_header_t;
struct ishtar_method_call_info_t;
typedef struct decimal_t { uint64_t h; uint64_t l; } decimal_t;
typedef uint16_t half_t;
typedef enum class_flag_t {
    CLASS_NONE = 0,
    CLASS_PUBLIC = 2,
    CLASS_STATIC = 4,
    CLASS_INTERNAL = 8,
    CLASS_PROTECTED = 16,
    CLASS_PRIVATE = 32,
    CLASS_ABSTRACT = 64,
    CLASS_SPECIAL = 128,
    CLASS_INTERFACE = 256,
    CLASS_ASPECT = 512,
    CLASS_UNDEFINED = 1024,
    CLASS_UNRESOLVED = 2048,
    CLASS_PREDEFINED = 4096,
    CLASS_NOTCOMPLETED = 8192,
    CLASS_AMORPHOUS = 16384,
} class_flag_t;
typedef enum field_flag_t {
    FIELD_NONE = 0,
    FIELD_LITERAL = 2,
    FIELD_PUBLIC = 4,
    FIELD_STATIC = 8,
    FIELD_PROTECTED = 16,
    FIELD_VIRTUAL = 32,
    FIELD_ABSTRACT = 64,
    FIELD_OVERRIDE = 128,
    FIELD_SPECIAL = 256,
    FIELD_READONLY = 512,
    FIELD_INTERNAL = 1024,
} field_flag_t;
typedef enum method_flags_t {
    METHOD_NONE = 0,
    METHOD_PUBLIC = 1,
    METHOD_STATIC = 2,
    METHOD_INTERNAL = 4,
    METHOD_PROTECTED = 8,
    METHOD_PRIVATE = 16,
    METHOD_EXTERN = 32,
    METHOD_VIRTUAL = 64,
    METHOD_ABSTRACT = 128,
    METHOD_OVERRIDE = 256,
    METHOD_SPECIAL = 512,
    METHOD_ASYNC = 1024,
    METHOD_GENERIC = 2048,
} method_flags_t;
typedef struct ishtar_object_t {
    struct ishtar_class_t* clazz;
    void* vtable;
    gc_flags_t flags;
    gc_color_t color;
    uint64_t refs_size;
    uint32_t vtable_size;
    int64_t __gc_id;
    int64_t m1;
    int64_t m2;
} ishtar_object_t;
typedef struct ishtar_rtoken_t {
    uint64_t value;
    uint32_t module_i_d;
    uint32_t class_i_d;
} ishtar_rtoken_t;
typedef struct ishtar_string_t {
    uint64_t id;
    uint64_t i_d;
} ishtar_string_t;
typedef struct ishtar_method_call_info_t {
    size_t module_handle;
    size_t symbol_handle;
    void* extern_function_declaration;
    void* jitted_wrapper;
    size_t compiled_func_ref;
    bool is_internal;
} ishtar_method_call_info_t;
typedef struct ishtar_method_t {
    void* _self;
    struct ishtar_method_header_t* header;
    struct ishtar_method_call_info_t p_i_info;
    uint64_t vtable_offset;
    struct ishtar_string_t* _name;
    struct ishtar_string_t* _raw_name;
    bool _ctor_called;
    method_flags_t flags;
    struct ishtar_class_t* owner;
    void* aspects;
    void* signature;
} ishtar_method_t;
typedef struct ishtar_method_header_t {
    uint32_t code_size;
    void* code;
    int16_t max_stack;
    void* exception_handler_list;
    void* labels_map;
    void* labels;
} ishtar_method_header_t;
typedef struct ishtar_class_t {
    void* _self_reference;
    void* methods;
    void* fields;
    void* aspects;
    struct ishtar_module_t* owner;
    struct ishtar_class_t* parent;
    void* full_name;
    bool _is_disposed;
    int32_t type_code;
    class_flag_t flags;
    struct ishtar_rtoken_t runtime_token;
    uint32_t i_d;
    uint16_t magic1;
    uint16_t magic2;
    uint64_t computed_size;
    bool is_inited;
    void* vtable;
    uint64_t vtable_size;
} ishtar_class_t;
typedef struct RuntimeComplexType {
    void* _type_arg;
    struct ishtar_class_t* _class;
} RuntimeComplexType;
typedef struct RuntimeIshtarField {
    struct ishtar_class_t* owner;
    struct RuntimeComplexType field_type;
    uint64_t vtable_offset;
    field_flag_t flags;
    void* full_name;
    void* aspects;
    struct ishtar_object_t* default_value;
    void* _self_ref;
} RuntimeIshtarField;
typedef struct RuntimeMethodArgument {
    struct RuntimeComplexType type;
    struct ishtar_string_t* name;
    void* self;
} RuntimeMethodArgument;
typedef struct RuntimeIshtarTypeArg {
    struct ishtar_string_t* id;
    struct ishtar_string_t* name;
    void* constraints;
} RuntimeIshtarTypeArg;
typedef struct IshtarParameterConstraint {
    int32_t kind;
    struct ishtar_class_t* type;
} IshtarParameterConstraint;
typedef struct RuntimeIshtarSignature {
    struct RuntimeComplexType return_type;
    void* arguments;
} RuntimeIshtarSignature;
typedef struct rawval_union {
    union { /* Offset: 0 */
        struct ishtar_method_t* m;
        struct ishtar_class_t* c;
    };
} rawval_union;
typedef struct rawval {
    struct rawval_union data;
    int32_t type;
} rawval;
typedef struct stack_union {
    union { /* Offset: 0 */
        int8_t b;
        int16_t s;
        int32_t i;
        int64_t l;
        uint8_t ub;
        uint16_t us;
        uint32_t ui;
        uint64_t ul;
        float f_r4;
        double f;
        decimal_t d;
        half_t hf;
        size_t p;
    };
} stack_union;
typedef struct ishtar_module_t {
    void* vault;
    uint32_t i_d;
    struct ishtar_version_t version;
    void* alias_table;
    void* class_table;
    void* deps_table;
    void* aspects_table;
    void* types_table;
    void* generics_table;
    void* fields_table;
    void* string_table;
    void* const_storage;
    struct ishtar_string_t* _name;
    struct ishtar_module_t* _self;
    struct ishtar_class_t* bootstrapper;
} ishtar_module_t;