include/ishtar.rs

#[test]
fn bindgen_test_layout_RuntimeIshtarField() {
    const UNINIT: ::std::mem::MaybeUninit<RuntimeIshtarField> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<RuntimeIshtarField>(),
        72usize,
        concat!("Size of: ", stringify!(RuntimeIshtarField))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeIshtarField>(),
        8usize,
        concat!("Alignment of ", stringify!(RuntimeIshtarField))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).owner) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarField),
            "::",
            stringify!(owner)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).field_type) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarField),
            "::",
            stringify!(field_type)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vtable_offset) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarField),
            "::",
            stringify!(vtable_offset)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarField),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).full_name) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarField),
            "::",
            stringify!(full_name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).aspects) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarField),
            "::",
            stringify!(aspects)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).default_value) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarField),
            "::",
            stringify!(default_value)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._self_ref) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarField),
            "::",
            stringify!(_self_ref)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RuntimeMethodArgument {
    pub type_: RuntimeComplexType,
    pub name: *mut ishtar_string_t,
    pub self_: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_RuntimeMethodArgument() {
    const UNINIT: ::std::mem::MaybeUninit<RuntimeMethodArgument> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<RuntimeMethodArgument>(),
        32usize,
        concat!("Size of: ", stringify!(RuntimeMethodArgument))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeMethodArgument>(),
        8usize,
        concat!("Alignment of ", stringify!(RuntimeMethodArgument))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeMethodArgument),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeMethodArgument),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).self_) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeMethodArgument),
            "::",
            stringify!(self_)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RuntimeIshtarTypeArg {
    pub id: *mut ishtar_string_t,
    pub name: *mut ishtar_string_t,
    pub constraints: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_RuntimeIshtarTypeArg() {
    const UNINIT: ::std::mem::MaybeUninit<RuntimeIshtarTypeArg> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<RuntimeIshtarTypeArg>(),
        24usize,
        concat!("Size of: ", stringify!(RuntimeIshtarTypeArg))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeIshtarTypeArg>(),
        8usize,
        concat!("Alignment of ", stringify!(RuntimeIshtarTypeArg))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).id) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarTypeArg),
            "::",
            stringify!(id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarTypeArg),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).constraints) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarTypeArg),
            "::",
            stringify!(constraints)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IshtarParameterConstraint {
    pub kind: i32,
    pub type_: *mut ishtar_class_t,
}
#[test]
fn bindgen_test_layout_IshtarParameterConstraint() {
    const UNINIT: ::std::mem::MaybeUninit<IshtarParameterConstraint> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<IshtarParameterConstraint>(),
        16usize,
        concat!("Size of: ", stringify!(IshtarParameterConstraint))
    );
    assert_eq!(
        ::std::mem::align_of::<IshtarParameterConstraint>(),
        8usize,
        concat!("Alignment of ", stringify!(IshtarParameterConstraint))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).kind) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IshtarParameterConstraint),
            "::",
            stringify!(kind)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(IshtarParameterConstraint),
            "::",
            stringify!(type_)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RuntimeIshtarSignature {
    pub return_type: RuntimeComplexType,
    pub arguments: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_RuntimeIshtarSignature() {
    const UNINIT: ::std::mem::MaybeUninit<RuntimeIshtarSignature> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<RuntimeIshtarSignature>(),
        24usize,
        concat!("Size of: ", stringify!(RuntimeIshtarSignature))
    );
    assert_eq!(
        ::std::mem::align_of::<RuntimeIshtarSignature>(),
        8usize,
        concat!("Alignment of ", stringify!(RuntimeIshtarSignature))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).return_type) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarSignature),
            "::",
            stringify!(return_type)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).arguments) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(RuntimeIshtarSignature),
            "::",
            stringify!(arguments)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct rawval_union {
    pub __bindgen_anon_1: rawval_union__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union rawval_union__bindgen_ty_1 {
    pub m: *mut ishtar_method_t,
    pub c: *mut ishtar_class_t,
}
#[test]
fn bindgen_test_layout_rawval_union__bindgen_ty_1() {
    const UNINIT: ::std::mem::MaybeUninit<rawval_union__bindgen_ty_1> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<rawval_union__bindgen_ty_1>(),
        8usize,
        concat!("Size of: ", stringify!(rawval_union__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<rawval_union__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(rawval_union__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rawval_union__bindgen_ty_1),
            "::",
            stringify!(m)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).c) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rawval_union__bindgen_ty_1),
            "::",
            stringify!(c)
        )
    );
}
#[test]
fn bindgen_test_layout_rawval_union() {
    assert_eq!(
        ::std::mem::size_of::<rawval_union>(),
        8usize,
        concat!("Size of: ", stringify!(rawval_union))
    );
    assert_eq!(
        ::std::mem::align_of::<rawval_union>(),
        8usize,
        concat!("Alignment of ", stringify!(rawval_union))
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct rawval {
    pub data: rawval_union,
    pub type_: i32,
}
#[test]
fn bindgen_test_layout_rawval() {
    const UNINIT: ::std::mem::MaybeUninit<rawval> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<rawval>(),
        16usize,
        concat!("Size of: ", stringify!(rawval))
    );
    assert_eq!(
        ::std::mem::align_of::<rawval>(),
        8usize,
        concat!("Alignment of ", stringify!(rawval))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).data) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rawval),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rawval),
            "::",
            stringify!(type_)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct stack_union {
    pub __bindgen_anon_1: stack_union__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union stack_union__bindgen_ty_1 {
    pub b: i8,
    pub s: i16,
    pub i: i32,
    pub l: i64,
    pub ub: u8,
    pub us: u16,
    pub ui: u32,
    pub ul: u64,
    pub f_r4: f32,
    pub f: f64,
    pub d: decimal_t,
    pub hf: half_t,
    pub p: usize,
}
